--- a/src/GroundJobs/GroundJobs.Data/GroundJobs.Data.csproj
+++ b/src/GroundJobs/GroundJobs.Data/GroundJobs.Data.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IEnterpriseReadyQuery.cs" />
     <Compile Include="IEnterpriseReadyRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
