--- a/src/GroundJobs/GroundJobs.Data.EF/GroundJobs.Data.EF.csproj
+++ b/src/GroundJobs/GroundJobs.Data.EF/GroundJobs.Data.EF.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GroundJobs.Data.EF</RootNamespace>
     <AssemblyName>GroundJobs.Data.EF</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
