--- a/src/GroundJobs/GroundJobs.Data/GroundJobs.Data.csproj
+++ b/src/GroundJobs/GroundJobs.Data/GroundJobs.Data.csproj
@@ -5,11 +5,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{88CBE0D2-55E4-4B27-AAC1-39FBE7101FF5}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GroundJobs.Data</RootNamespace>
     <AssemblyName>GroundJobs.Data</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
