--- a/src/GroundJobs/GroundJobs.ServiceBus.Tests/GroundJobs.ServiceBus.Tests.csproj
+++ b/src/GroundJobs/GroundJobs.ServiceBus.Tests/GroundJobs.ServiceBus.Tests.csproj
@@ -66,6 +66,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ServiceBusAggregationSpecification.cs" />
     <Compile Include="ServiceBusPublishingSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
