--- a/src/GroundJobs/GroundJobs.ServiceBus/GroundJobs.ServiceBus.csproj
+++ b/src/GroundJobs/GroundJobs.ServiceBus/GroundJobs.ServiceBus.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\PostCodeSearchCommand.cs" />
     <Compile Include="Services\PretEateriesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBus.cs" />
