--- a/src/GroundJobs/GroundJobs.ServiceBus.Tests/GroundJobs.ServiceBus.Tests.csproj
+++ b/src/GroundJobs/GroundJobs.ServiceBus.Tests/GroundJobs.ServiceBus.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="ServiceBusAggregationSpecification.cs" />
     <Compile Include="ServiceBusPublishingSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\StarbucksServiceSpecification.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
