Added google service, not finished

--- a/src/GroundJobs/GroundJobs.ServiceBus/GroundJobs.ServiceBus.csproj
+++ b/src/GroundJobs/GroundJobs.ServiceBus/GroundJobs.ServiceBus.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Services\BaseHtmlScrapingService.cs" />
     <Compile Include="Services\GetEateriesRequest.cs" />
     <Compile Include="Services\GetEateriesResponse.cs" />
+    <Compile Include="Services\GooglePlacesService.cs" />
     <Compile Include="Services\PostCodeSearchCommand.cs" />
     <Compile Include="Services\PretEateriesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
