Refactored the services to a different location

--- a/src/GroundJobs/GroundJobs.Services/GroundJobs.Services.csproj
+++ b/src/GroundJobs/GroundJobs.Services/GroundJobs.Services.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DC6176CF-E966-46AE-B52C-A31F86383469}</ProjectGuid>
+    <ProjectGuid>{F1A70D92-4FC6-4514-B429-E85B4C1FB7D0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GroundJobs.ServiceBus</RootNamespace>
-    <AssemblyName>GroundJobs.ServiceBus</AssemblyName>
+    <RootNamespace>GroundJobs.Services</RootNamespace>
+    <AssemblyName>GroundJobs.Services</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,12 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="RestSharp, Version=105.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.105.1.0\lib\net451\RestSharp.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -49,9 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseHtmlScrapingService.cs" />
+    <Compile Include="GetEateriesRequest.cs" />
+    <Compile Include="GetEateriesResponse.cs" />
+    <Compile Include="PostCodeSearchCommand.cs" />
+    <Compile Include="PretEateriesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceBus.cs" />
-    <Compile Include="ServiceContracts.cs" />
+    <Compile Include="StarbucksService.cs" />
+    <Compile Include="StringExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GroundJobs.ServiceBus\GroundJobs.ServiceBus.csproj">
+      <Project>{DC6176CF-E966-46AE-B52C-A31F86383469}</Project>
+      <Name>GroundJobs.ServiceBus</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
