--- a/src/GroundJobs/GroundJobs.ServiceBus.Tests/GroundJobs.ServiceBus.Tests.csproj
+++ b/src/GroundJobs/GroundJobs.ServiceBus.Tests/GroundJobs.ServiceBus.Tests.csproj
@@ -70,7 +70,7 @@
     <Compile Include="ServiceBusPublishingSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\StarbucksServiceSpecification.cs" />
-	<Compile Include="GooglePlacesService.cs" />
+    <Compile Include="Services\GooglePlacesSpecification.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
