Split out the google services to allow multiple place requests inside the aggregator

--- a/src/GroundJobs/GroundJobs.Services/GroundJobs.Services.csproj
+++ b/src/GroundJobs/GroundJobs.Services/GroundJobs.Services.csproj
@@ -51,6 +51,7 @@
     <Compile Include="FoodServices\ClosestEateryResponse.cs" />
     <Compile Include="FoodServices\ClosestGooglePlaceRequest.cs" />
     <Compile Include="FoodServices\EateryResult.cs" />
+    <Compile Include="FoodServices\GoogleEateriesService.cs" />
     <Compile Include="FoodServices\GooglePlacesService.cs" />
     <Compile Include="FoodServices\PretEateriesService.cs" />
     <Compile Include="FoodServices\StarbucksService.cs" />
