--- a/src/GroundJobs/GroundJobs.Services.Tests/GroundJobs.Services.Tests.csproj
+++ b/src/GroundJobs/GroundJobs.Services.Tests/GroundJobs.Services.Tests.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GooglePlacesSpecification.cs" />
+    <Compile Include="McDonaldsServiceSpecification.cs" />
     <Compile Include="PretEateriesServiceServiceSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StarbucksServiceSpecification.cs" />
